--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
             <span class=" mt-2">language</span>
             <div class="dropdown">
               <button class="btn btn-mone bg-light border-none ml-2" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Dropdown button
+                English
                 <ion-icon name="chevron-down-outline" ></ion-icon>
                 
               </button>
 
               <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <a class="dropdown-item" href="#">Something else here</a>
+                <a class="dropdown-item" href="#">hindi</a>
+                <a class="dropdown-item" href="#">marathi</a>
+                <a class="dropdown-item" href="#">punjabi</a>
               </div>
             </div>
           </div>
