--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
         <img src="./images/man-in-white-dress-shirt-holding-suit-jacket-1043474.png" alt="">
         <div class="dropdown mt-2">
           <button class="btn btn-mone bg-light border-none ml-2" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown button
+            David
             <ion-icon name="chevron-down-outline" ></ion-icon>
             
           </button>
 
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="#">Profile</a>
+            <a class="dropdown-item" href="#">Another profile</a>
             <a class="dropdown-item" href="#">Something else here</a>
           </div>
         </div>
