--- a/index.html
+++ b/index.html
@@ -295,10 +295,11 @@
   <!-- our customers -->
 
   <div class="col-12">
-    <div class="container">
     <div class="row mb-5 ">
+      <div class="container">
      
       <div class="col-12 col-md-6 mb-5  loved_customers">
+        <h3>Our Customers Say the Nicest Things</h3>
 
           <div class="card py-3 px-3">
               <h5 class="nicest_things_heading">
