--- a/index.html
+++ b/index.html
@@ -296,154 +296,71 @@
 
   <div class="col-12">
     <div class="row mb-5 ">
+
       <div class="container">
-     
-      <div class="col-12 col-md-6 mb-5  loved_customers">
-        <h3>Our Customers Say the Nicest Things</h3>
+        <h3 class="ml-4 my-3">Our Customers Say the Nicest Things</h3>
+        <div class="container d-flex">
+          <div class="col-12  col-md-6 mb-5   loved_customers">
 
-          <div class="card py-3 px-3">
-              <h5 class="nicest_things_heading">
-                  Loved by customers
-              </h5>
-              <!-- stars -->
-              <div class="d-flex justify-content-start py-4">
-                  <div class="stars ">
-                      <img src="./images/star-outline.svg" alt="star" width="22">
-                      <img src="./images/star-outline.svg" alt="star" width="22">
-                      <img src="./images/star-outline.svg" alt="star" width="22">
-                      <img src="./images/star-outline.svg" alt="star" width="22">
-                      <img src="./images/star-outline.svg" alt="star" width="22">
+              <div class="card py-3 px-3">
+                  <h5 class="our_cstmr_heading">
+                      Loved by customers
+                  </h5>
+                  <!-- stars -->
+                  <div class="d-flex justify-content-start py-4">
+                      <div class="stars ">
+                          <img src="./images/star-outline.svg" alt="star" width="22">
+                          <img src="./images/star-outline.svg" alt="star" width="22">
+                          <img src="./images/star-outline.svg" alt="star" width="22">
+                          <img src="./images/star-outline.svg" alt="star" width="22">
+                          <img src="./images/star-outline.svg" alt="star" width="22">
+                      </div>
+                      <div>
+                          <p class="our_cstm_text ml-4">2.8M reviews</p>
+                      </div>
                   </div>
-                  <div>
-                      <p class="nicest_things_text ml-4">2.8M reviews</p>
-                  </div>
+                  <!-- stars -->
+                  <p class="our_cstm_text">
+                      Genie is the leading provider for home services. Genie Professionals are rated and
+                      reviewed by customers like you. Choose the pro you want to work with by adding them to
+                      your Pro Team.
+                  </p>
               </div>
-              <!-- stars -->
-              <p class="nicest_things_text">
-                  Genie is the leading provider for home services. Genie Professionals are rated and
-                  reviewed by customers like you. Choose the pro you want to work with by adding them to
-                  your Pro Team.
-              </p>
           </div>
-      </div>
-      <div class="card col-12 col-md-6 mb-3">
-          <div id="demo" class="carousel slide" data-ride="carousel">
-              <!-- Indicators -->
-              <ul class="carousel-indicators">
-                  <li data-target="#demo" data-slide-to="0" class=""></li>
-                  <li data-target="#demo" data-slide-to="1" class=""></li>
-                  <li data-target="#demo" data-slide-to="2" class="active"></li>
-              </ul>
-              <!-- The slideshow -->
-              <div class="carousel-inner">
-                  <div class="carousel-item">
-                      <!-- <h3>swati</h3> -->
-                      <div class="nicest_things_card py-4 px-4">
-                          <div class="d-flex align-items-center">
-                              <div class="mb-2 ">
-                                  <img src="./images/adult-beard-boy-casual-220453.png" alt="">
+          <div class="card col-12 col-md-6 mb-3">
+              <div id="demo" class="carousel slide" data-ride="carousel">
+                  <!-- Indicators -->
+                  <ul class="carousel-indicators">
+                      <li data-target="#demo" data-slide-to="0" class=""></li>
+                      <li data-target="#demo" data-slide-to="1" class=""></li>
+                      <li data-target="#demo" data-slide-to="2" class="active"></li>
+                  </ul>
+                  <!-- The slideshow -->
+                  <div class="carousel-inner">
+                      <div class="carousel-item">
+                          <!-- <h3>swati</h3> -->
+                          <div class="nicest_things_card py-4 px-4">
+                              <div class="d-flex align-items-center">
+                                  <div class="mb-2 ">
+                                      <img src="./images/adult-beard-boy-casual-220453.png" alt="">
+                                  </div>
+                                  <!-- <div class="nicest_heart">
+                                      <img src="./images/adult-beard-boy-casual-220453.png" alt="" width="22">
+                                  </div> -->
+                                  <div class="ml-4">
+                                      <h4 class="how_it_works_sub_heading">Dr. Jerry France</h4>
+                                      <p class="how_it_works_description">124 appointments</p>
+                                      <p class="how_it_works_description">New York , NY</p>
+                                  </div>
                               </div>
-                              <!-- <div class="nicest_heart">
-                                  <img src="./images/adult-beard-boy-casual-220453.png" alt="" width="22">
-                              </div> -->
-                              <div class="ml-4">
-                                  <h4 class="how_it_works_sub_heading">Dr. Jerry France</h4>
-                                  <p class="how_it_works_description">124 appointments</p>
-                                  <p class="how_it_works_description">New York , NY</p>
-                              </div>
-                          </div>
-                          <hr class="nicest_things_hr">
-                          <div class="nicest_things_bottom">
-                              <h5 class="ml-5">
-                                  Dr. Jerry's Review
-                              </h5>
+                              <hr class="nicest_things_hr">
+                              <div class="nicest_things_bottom">
+                                  <h5 class="ml-5">
+                                      Dr. Jerry's Review
+                                  </h5>
 
-                              <div class="d-flex align-items-center mb-3">
-                                <div class="stars">
-                                  <img src="./images/star-outline.svg" alt="star" width="15">
-                                  <img src="./images/star-outline.svg" alt="star" width="15">
-                                  <img src="./images/star-outline.svg" alt="star" width="15">
-                                  <img src="./images/star-outline.svg" alt="star" width="15">
-                                  <img src="./images/star-outline.svg" alt="star" width="15">
-                              </div>
-
-
-                              </div>
-
-                              <p>
-                                  Lorem Ipsum is simply dummy text of the printing and typesetting
-                                  industry. Lorem Ipsum has been the industry's standard dummy text ever
-                                  since
-                              </p>
-                          </div>
-
-                      </div>
-                  </div>
-                  <div class="carousel-item">
-                      <div class="nicest_things_card py-4 px-4">
-                          <div class="d-flex align-items-center">
-                              <div class="mb-2 ">
-                                  <img src="./images/adult-beard-boy-casual-220453.png" alt="">
-                              </div>
-                              <!-- <div class="nicest_heart">
-                                  <img src="./images/vaid g/Group 42976.svg" alt="" width="22">
-                              </div> -->
-                              <div class="ml-4">
-                                  <h4 class="how_it_works_sub_heading">Dr. Kevin</h4>
-                                  <p class="how_it_works_description">124 appointments</p>
-                                  <p class="how_it_works_description">Inglewood , CA</p>
-                              </div>
-                          </div>
-                          <hr class="nicest_things_hr">
-                          <div class="nicest_things_bottom">
-                              <h5 class="ml-4">
-                                  Kevin's Review
-                              </h5>
-
-                              <div class="d-flex align-items-center mb-3">
-                                <div class="stars">
-                                  <img src="./images/star-outline.svg" alt="star" width="15">
-                                  <img src="./images/star-outline.svg" alt="star" width="15">
-                                  <img src="./images/star-outline.svg" alt="star" width="15">
-                                  <img src="./images/star-outline.svg" alt="star" width="15">
-                                  <img src="./images/star-outline.svg" alt="star" width="15">
-                                </div>
-
-
-                              </div>
-
-                              <p>
-                                  Lorem Ipsum is simply dummy text of the printing and typesetting
-                                  industry. Lorem Ipsum has been the industry's standard dummy text ever
-                                  since
-                              </p>
-                          </div>
-
-                      </div>
-                  </div>
-                  <div class="carousel-item active">
-                      <div class="nicest_things_card py-4 px-4">
-                          <div class="d-flex align-items-center">
-                              <div class="mb-2 ">
-                                  <img src="./images/adult-beard-boy-casual-220453.png" alt="">
-                              </div>
-                              <div class="nicest_heart">
-                                  <img src="./images/vaid g/Group 42976.svg" alt="" width="22">
-                              </div>
-                              <div class="ml-4">
-                                  <h4 class="how_it_works_sub_heading">Dr. Ronald</h4>
-                                  <p class="how_it_works_description">124 appointments</p>
-                                  <p class="how_it_works_description">Inglewood , CA</p>
-                              </div>
-                          </div>
-                          <hr class="nicest_things_hr">
-                          <div class="nicest_things_bottom">
-                              <h5 class="ml-4">
-                                  Kevin's Review
-                              </h5>
-
-                              <div class="d-flex align-items-center mb-3">
-                                  <div class="stars">
+                                  <div class="d-flex align-items-center mb-3">
+                                    <div class="stars">
                                       <img src="./images/star-outline.svg" alt="star" width="15">
                                       <img src="./images/star-outline.svg" alt="star" width="15">
                                       <img src="./images/star-outline.svg" alt="star" width="15">
@@ -451,27 +368,112 @@
                                       <img src="./images/star-outline.svg" alt="star" width="15">
                                   </div>
 
-                              </div>
-                              <p>
-                                  Lorem Ipsum is simply dummy text of the printing and typesetting
-                                  industry. Lorem Ipsum has been the industry's standard dummy text ever
-                                  since
-                              </p>
-                          </div>
 
+                                  </div>
+
+                                  <p>
+                                      Lorem Ipsum is simply dummy text of the printing and typesetting
+                                      industry. Lorem Ipsum has been the industry's standard dummy text ever
+                                      since
+                                  </p>
+                              </div>
+
+                          </div>
+                      </div>
+                      <div class="carousel-item">
+                          <div class="nicest_things_card py-4 px-4">
+                              <div class="d-flex align-items-center">
+                                  <div class="mb-2 ">
+                                      <img src="./images/adult-beard-boy-casual-220453.png" alt="">
+                                  </div>
+                                  <!-- <div class="nicest_heart">
+                                      <img src="./images/vaid g/Group 42976.svg" alt="" width="22">
+                                  </div> -->
+                                  <div class="ml-4">
+                                      <h4 class="how_it_works_sub_heading">Dr. Kevin</h4>
+                                      <p class="how_it_works_description">124 appointments</p>
+                                      <p class="how_it_works_description">Inglewood , CA</p>
+                                  </div>
+                              </div>
+                              <hr class="nicest_things_hr">
+                              <div class="nicest_things_bottom">
+                                  <h5 class="ml-4">
+                                      Kevin's Review
+                                  </h5>
+
+                                  <div class="d-flex align-items-center mb-3">
+                                    <div class="stars">
+                                      <img src="./images/star-outline.svg" alt="star" width="15">
+                                      <img src="./images/star-outline.svg" alt="star" width="15">
+                                      <img src="./images/star-outline.svg" alt="star" width="15">
+                                      <img src="./images/star-outline.svg" alt="star" width="15">
+                                      <img src="./images/star-outline.svg" alt="star" width="15">
+                                    </div>
+
+
+                                  </div>
+
+                                  <p>
+                                      Lorem Ipsum is simply dummy text of the printing and typesetting
+                                      industry. Lorem Ipsum has been the industry's standard dummy text ever
+                                      since
+                                  </p>
+                              </div>
+
+                          </div>
+                      </div>
+                      <div class="carousel-item active">
+                          <div class="nicest_things_card py-4 px-4">
+                              <div class="d-flex align-items-center">
+                                  <div class="mb-2 ">
+                                      <img src="./images/adult-beard-boy-casual-220453.png" alt="">
+                                  </div>
+                                  <div class="nicest_heart">
+                                      <img src="./images/vaid g/Group 42976.svg" alt="" width="22">
+                                  </div>
+                                  <div class="ml-4">
+                                      <h4 class="how_it_works_sub_heading">Dr. Ronald</h4>
+                                      <p class="how_it_works_description">124 appointments</p>
+                                      <p class="how_it_works_description">Inglewood , CA</p>
+                                  </div>
+                              </div>
+                              <hr class="nicest_things_hr">
+                              <div class="nicest_things_bottom">
+                                  <h5 class="ml-4">
+                                      Kevin's Review
+                                  </h5>
+
+                                  <div class="d-flex align-items-center mb-3">
+                                      <div class="stars">
+                                          <img src="./images/star-outline.svg" alt="star" width="15">
+                                          <img src="./images/star-outline.svg" alt="star" width="15">
+                                          <img src="./images/star-outline.svg" alt="star" width="15">
+                                          <img src="./images/star-outline.svg" alt="star" width="15">
+                                          <img src="./images/star-outline.svg" alt="star" width="15">
+                                      </div>
+
+                                  </div>
+                                  <p>
+                                      Lorem Ipsum is simply dummy text of the printing and typesetting
+                                      industry. Lorem Ipsum has been the industry's standard dummy text ever
+                                      since
+                                  </p>
+                              </div>
+
+                          </div>
                       </div>
                   </div>
-              </div>
 
-              <!-- Left and right controls -->
-              <a class="carousel-control-prev" href="#demo" data-slide="prev">
-                  <img class="mr-5 mt-3 " src="./images/chevron-back-outline.svg ">
-              </a>
-              <a class="carousel-control-next" href="#demo" data-slide="next">
-                  <img class="ml-5 mt-3" src="./images/chevron-forward-outline.svg">
-              </a>
+                  <!-- Left and right controls -->
+                  <a class="carousel-control-prev" href="#demo" data-slide="prev">
+                      <img class="mr-5 mt-3 " src="./images/chevron-back-outline.svg ">
+                  </a>
+                  <a class="carousel-control-next" href="#demo" data-slide="next">
+                      <img class="ml-5 mt-3" src="./images/chevron-forward-outline.svg">
+                  </a>
+              </div>
           </div>
-      </div>
+        </div>
     </div>
   </div>
 
