--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
 
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/media.css">
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -105,7 +106,7 @@
                   <a class="dropdown-item" href="#">Link 3</a>
                 </div>
                 <div class="d-flex">
-                  <input type="text" class="bnnr-search border p-4 ml-2" placeholder="Search for a Specialty" id="banner_search" style="font-size: 1rem;height: 3.5vw; width: 31vw;" >
+                  <input type="text" class="bnnr-search border p-4 ml-2" placeholder="Search for a Specialty" id="banner_search" style="font-size: 1rem;height: 3.5rem; width: 27rem;" >
                   <ion-icon name="search-outline" class="banner_search"></ion-icon>
                 </div>
               </div>
@@ -145,7 +146,7 @@
           <div class="col-12 col-md-4 my-2" >
             <div class="card c-tomato">
               <div class="card-body">
-                <h4 class="card-title text-center my-4 book_an_appointmnt">Tele Appointment</h4>
+                <h4 class="card-title text-center mt-4 mb-4 book_an_appointmnt">Tele Appointment</h4>
                 <div class="card-text text-center "><button class="btn border-light book-now-btn">Book Now</button></div>
                 
               </div>
@@ -251,7 +252,7 @@
               
               <img class="card-img align-self-center " src="./images/Group 69.svg" alt="Card image" style="width:50%">
               <div class="card-body">
-                <div class="card-body">
+                <div class="card-body info ">
                   <h4 class="card-titleh text-center">Pick a time</h4>
                   <p class="card-text txt-hwt text-center" >We're available 24/7, and you can easily book the service online.</p>
                   <!-- <a href="#" class="btn btn-primary">See Profile</a> -->
@@ -265,7 +266,7 @@
               <!-- style="width:400px" -->
               <img class="card-img align-self-center " src="./images/Group 71.svg" alt="Card image" style="width:50%">
               <div class="card-body">
-                <div class="card-body">
+                <div class="card-body info">
                   <h4 class="card-titleh text-center">Book Appointments</h4>
                   <p class="card-text txt-hwt text-center" >We'll confirm your appointment and securely take care of your online payment.</p>
                   <!-- <a href="#" class="btn btn-primary">See Profile</a> -->
@@ -279,7 +280,7 @@
               <!-- style="width:400px" -->
               <img class="card-img align-self-center" src="./images/Group 70.svg" alt="Card image" style="width:50%">
               <div class="card-body">
-                <div class="card-body">
+                <div class="card-body info">
                   <h4 class="card-titleh text-center">Connect with doctor</h4>
                   <p class="card-text txt-hwt text-center " >We'll confirm your appointment and securely take care of your online payment.</p>
                   <!-- <a href="#" class="btn btn-primary">See Profile</a> -->
