--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           </div>
         </li>
       </ul>
-      <span class="navbar-text d-flex align-item-center">
+      <span class="mr-5 navbar-text d-flex align-item-center">
         <img class="profile" src="./images/man-in-white-dress-shirt-holding-suit-jacket-1043474.png" alt="">
         <div class="dropdown  mt-2">
           <button class="btn btn-mone bg-none border-none  d-flex justify-content-between " type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
